--- a/Code/darren/javascriptATMlab.html
+++ b/Code/darren/javascriptATMlab.html
@@ -11,7 +11,9 @@
   }
   body {
     width: 500px;
-    z-index: 0
+    z-index: 0;
+    background-color: black;
+    color: white
   }
   .sidebar {
     display: inline;
