Remove unused functionality

--- a/Code/Drew/htmlcss/lab04-personal_portfolio.html
+++ b/Code/Drew/htmlcss/lab04-personal_portfolio.html
@@ -552,9 +552,9 @@
             // } else {
             //   nanoIcon.style.visibility = 'hidden';
             // }
-            console.log('px dn: '+scrollPixels)
-            console.log('pct dn: '+scrollPercent)
-            console.log('width: '+window.innerWidth)
+            // console.log('px dn: '+scrollPixels)
+            // console.log('pct dn: '+scrollPercent)
+            // console.log('width: '+window.innerWidth)
             // console.log("vh:" + _1vh + ", vw:" + _1vw)
             // console.log("moonRange: " + moonRange)
             // console.log(scrollPixels/window.innerWidth)
